# ai-catalog

./: .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  backup  files.txt  package-lock.json
api/: package-lock.json  package.json  package.json.bak  packagesold.json
api/src/: index.ts  oldindex.ts
catalog/: .env.example  pyproject.toml
ops/: 1.py  docker-compose.yml.old  docker-composeoriginal.old
ops/trino-mini/etc/: jvm.config  node.properties
ops/trino-mini/etc/catalog/: iceberg.properties
ops/trino/etc/: jvm.config  node.properties
ops/trino/etc/catalog/: iceberg.properties
scripts/: demo.sh  embed_dataset.ts  package-lock.json  package.json
ui/: .trino_98599_433.sql  README.md  build_card.sh  build_cards_20.sh  build_cards_fresh.sh  error.out  file.txt  nuke.sh  out.txt  package-lock.json  package.json  results.out  results4e.txt  resultsSQL.out
ui/scripts/: 5atAtime.sh  build_one_card_sleepy.sh  drop-entities.mjs  reseed-all.sh  reseed-business.mjs  reseed-demo.mjs  sync-catalog.sh
ui/src/components/: Card.tsx  Layout.tsx  LineageVisualization.tsx
ui/src/lib/: ai.ts  duckdb.ts  jsonsafe.ts  mock.ts  publish.ts  publishEmbeddings.ts  trino.ts  types.ts
ui/src/pages/: _app.tsx  answer.tsx  ask.tsx  index.tsx  index.tsx.old
ui/src/pages/api/: answer.ts  ask.ts  datasets.ts
ui/src/pages/api/datasets/: [id].ts
ui/src/pages/api/publish/: [id].ts
ui/src/pages/dataset/: [id].tsx
ui/src/styles/: Lineage.css  globals.css
ui/src/utils/: lineageDAG.ts
ui/trino-catalog/: iceberg.properties
(+1 files in other folders)
